Fix .box spacing issues

--- a/app/scss/components.scss
+++ b/app/scss/components.scss
@@ -32,7 +32,7 @@ a:hover {
 }
 
 .box .box-body {
-	padding: 1em;
+	padding: 1em !important;
 }
 
 // .box form {
